--- a/css/filters.css
+++ b/css/filters.css
@@ -97,10 +97,6 @@
   background-color: #ddd;
 }
 
-.show {
-  display: block;
-}
-
 .filters__arrow {
   height: 20px;
 }
@@ -122,3 +118,7 @@
   box-sizing: border-box;
   width: 20px;
 }
+
+/* .show {
+  display: block;
+} */
