--- a/css/modal.css
+++ b/css/modal.css
@@ -19,7 +19,7 @@
   padding: 0;
   border: 1px solid black;
   border-radius: 5px 5px;
-  width: 50%;
+  max-width: 650px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
   -webkit-animation-name: animatetop;
   -webkit-animation-duration: 0.4s;
